# python-project-51

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml
github-com-altvec-python-project-lvl3-blob-master-Makefile_files/: github-com-altvec-python-project-lvl3-blob-master-Makefile.html  github-com.html
page_loader/: __init__.py  assets.py  cli.py  common.py  downloader.py  helpers.py  loader.py  logging.py  names.py  resources.py
page_loader/scripts/: page_loader.py  run.py
temp_dir/: ru-hexlet-io-courses.html
temp_dir/ru-hexlet-io-courses_files/: ru-hexlet-io-courses.html  ru-hexlet-io-lessons.html
tests/: test_download.py  test_loader.py  test_make_name_from_url.py  test_make_resource_path.py
