[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ilya Malashenko <ilya.malashenko.developer@gmail.com>"]
packages = [
    { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26"
beautifulsoup4 = "^4.10"
progress = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
wemake-python-styleguide = "^0.16.0"
flake8 = "^4.0"
coverage = "^6.1"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

