[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ilya Malashenko <ilya.malashenko.developer@gmail.com>"]
packages = [
    { include = "page_loader" },
]

[tool.poetry.scripts]
loader = "page_loader.scripts.loader:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bs4 = "^0.0.1"
progress = "^1.6"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
requests-mock = "^1.10.0"
coverage = "^6.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


